@@ -12,11 +12,10 @@ import org.springframework.core.io.ClassPathResource;
 import org.springframework.core.io.Resource;
 import ru.axenix.smartax.dui.service.application.template.domain.TemplateEntity;
 import ru.axenix.smartax.dui.service.application.template.domain.TemplateRepository;
-import ru.axenix.smartax.dui.service.error.ApplicationException;
 import ru.axenix.smartax.dui.service.application.template.model.FileDto;
-import ru.axenix.smartax.dui.service.application.template.model.TemplateDto;
-import ru.axenix.smartax.dui.service.application.template.model.TemplateFilterDto;
-import ru.axenix.smartax.dui.service.application.template.model.TemplateType;
+import ru.axenix.smartax.dui.service.contract.model.TemplateDto;
+import ru.axenix.smartax.dui.service.contract.model.TemplateFilterDto;
+import ru.axenix.smartax.dui.service.error.ApplicationException;
 
 import java.util.List;
 import java.util.Optional;
@@ -25,7 +24,8 @@ import java.util.UUID;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertNotNull;
 import static org.junit.jupiter.api.Assertions.assertThrows;
-import static org.mockito.Mockito.any;
+import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.Mockito.mock;
 import static org.mockito.Mockito.mockConstruction;
 import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
@@ -52,58 +52,65 @@ class TemplateServiceImplTest {
                 .title("Test Template")
                 .filenamePage("test.json")
                 .filenameImage("test.png")
-                .type(TemplateType.PAGE)
+                .type(TemplateFilterDto.TypeEnum.PAGE)
                 .build();
     }
 
     @Test
     @DisplayName("getTemplates should return all templates when filter is null")
-    void test_get_templates_with_null_filter() {
+    void testGetTemplatesWithNullFilter() {
         when(templateRepository.findAll()).thenReturn(List.of(templateEntity));
 
         List<TemplateDto> result = templateService.getTemplates(null);
 
         assertEquals(1, result.size());
-        assertEquals(templateEntity.getUuid(), result.getFirst().getUuid());
+        assertEquals(templateEntity.getUuid(), result.get(0).getTemplateId());
+        assertEquals(templateEntity.getTitle(), result.get(0).getDescription());
         verify(templateRepository, times(1)).findAll();
         verify(templateRepository, never()).findAllByType(any());
     }
 
     @Test
     @DisplayName("getTemplates should return all templates when filter type is null")
-    void test_get_templates_with_null_filter_type() {
-        TemplateFilterDto filter = new TemplateFilterDto(null);
+    void testGetTemplatesWithNullFilterType() {
+        TemplateFilterDto filter = mock(TemplateFilterDto.class);
+        when(filter.getType()).thenReturn(null);
         when(templateRepository.findAll()).thenReturn(List.of(templateEntity));
 
         List<TemplateDto> result = templateService.getTemplates(filter);
 
         assertEquals(1, result.size());
-        assertEquals(templateEntity.getUuid(), result.getFirst().getUuid());
+        assertEquals(templateEntity.getUuid(), result.get(0).getTemplateId());
+        assertEquals(templateEntity.getTitle(), result.get(0).getDescription());
         verify(templateRepository, times(1)).findAll();
         verify(templateRepository, never()).findAllByType(any());
     }
 
     @Test
     @DisplayName("getTemplates should return filtered templates when a valid filter type is provided")
-    void test_get_templates_with_valid_filter_type() {
-        TemplateFilterDto filter = new TemplateFilterDto(TemplateType.PAGE);
-        when(templateRepository.findAllByType(TemplateType.PAGE)).thenReturn(List.of(templateEntity));
+    void testGetTemplatesWithValidFilterType() {
+        TemplateFilterDto filter = mock(TemplateFilterDto.class);
+        when(filter.getType()).thenReturn(TemplateFilterDto.TypeEnum.PAGE);
+        when(templateRepository.findAllByType(TemplateFilterDto.TypeEnum.PAGE)).thenReturn(List.of(templateEntity));
 
         List<TemplateDto> result = templateService.getTemplates(filter);
 
         assertEquals(1, result.size());
-        assertEquals(templateEntity.getUuid(), result.getFirst().getUuid());
+        assertEquals(templateEntity.getUuid(), result.get(0).getTemplateId());
+        assertEquals(templateEntity.getTitle(), result.get(0).getDescription());
         verify(templateRepository, never()).findAll();
-        verify(templateRepository, times(1)).findAllByType(TemplateType.PAGE);
+        verify(templateRepository, times(1)).findAllByType(TemplateFilterDto.TypeEnum.PAGE);
     }
 
     @Test
     @DisplayName("getTemplatePage should return resource for a valid template UUID")
-    void test_get_template_page_with_valid_uuid() {
+    void testGetTemplatePageWithValidUuid() {
         when(templateRepository.findById(templateUuid)).thenReturn(Optional.of(templateEntity));
 
-        try (MockedConstruction<ClassPathResource> mocked = mockConstruction(ClassPathResource.class,
-                (mock, context) -> when(mock.exists()).thenReturn(true))) {
+        try (MockedConstruction<ClassPathResource> mocked = mockConstruction(
+                ClassPathResource.class,
+                (mock, context) -> when(mock.exists()).thenReturn(true)
+        )) {
             Resource result = templateService.getTemplatePage(templateUuid);
 
             assertNotNull(result);
@@ -113,7 +120,7 @@ class TemplateServiceImplTest {
 
     @Test
     @DisplayName("getTemplatePage should throw TEMPLATE_NOT_FOUND for an invalid UUID")
-    void test_get_template_page_with_invalid_uuid() {
+    void testGetTemplatePageWithInvalidUuid() {
         when(templateRepository.findById(templateUuid)).thenReturn(Optional.empty());
 
         assertThrows(ApplicationException.class, () -> templateService.getTemplatePage(templateUuid));
@@ -121,11 +128,13 @@ class TemplateServiceImplTest {
 
     @Test
     @DisplayName("getTemplatePage should throw TEMPLATE_PAGE_NOT_FOUND when resource does not exist")
-    void test_get_template_page_with_non_existent_resource() {
+    void testGetTemplatePageWithNonExistentResource() {
         when(templateRepository.findById(templateUuid)).thenReturn(Optional.of(templateEntity));
 
-        try (MockedConstruction<ClassPathResource> mocked = mockConstruction(ClassPathResource.class,
-                (mock, context) -> when(mock.exists()).thenReturn(false))) {
+        try (MockedConstruction<ClassPathResource> mocked = mockConstruction(
+                ClassPathResource.class,
+                (mock, context) -> when(mock.exists()).thenReturn(false)
+        )) {
             assertThrows(ApplicationException.class, () -> templateService.getTemplatePage(templateUuid));
             assertEquals(1, mocked.constructed().size());
         }
@@ -133,11 +142,13 @@ class TemplateServiceImplTest {
 
     @Test
     @DisplayName("getTemplateImage should return FileDto for a valid template UUID")
-    void test_get_template_image_with_valid_uuid() {
+    void testGetTemplateImageWithValidUuid() {
         when(templateRepository.findById(templateUuid)).thenReturn(Optional.of(templateEntity));
 
-        try (MockedConstruction<ClassPathResource> mocked = mockConstruction(ClassPathResource.class,
-                (mock, context) -> when(mock.exists()).thenReturn(true))) {
+        try (MockedConstruction<ClassPathResource> mocked = mockConstruction(
+                ClassPathResource.class,
+                (mock, context) -> when(mock.exists()).thenReturn(true)
+        )) {
             FileDto result = templateService.getTemplateImage(templateUuid);
 
             assertNotNull(result);
@@ -149,7 +160,7 @@ class TemplateServiceImplTest {
 
     @Test
     @DisplayName("getTemplateImage should throw TEMPLATE_NOT_FOUND for an invalid UUID")
-    void test_get_template_image_with_invalid_uuid() {
+    void testGetTemplateImageWithInvalidUuid() {
         when(templateRepository.findById(templateUuid)).thenReturn(Optional.empty());
 
         assertThrows(ApplicationException.class, () -> templateService.getTemplateImage(templateUuid));
@@ -157,11 +168,13 @@ class TemplateServiceImplTest {
 
     @Test
     @DisplayName("getTemplateImage should throw TEMPLATE_IMAGE_NOT_FOUND when resource does not exist")
-    void test_get_template_image_with_non_existent_resource() {
+    void testGetTemplateImageWithNonExistentResource() {
         when(templateRepository.findById(templateUuid)).thenReturn(Optional.of(templateEntity));
 
-        try (MockedConstruction<ClassPathResource> mocked = mockConstruction(ClassPathResource.class,
-                (mock, context) -> when(mock.exists()).thenReturn(false))) {
+        try (MockedConstruction<ClassPathResource> mocked = mockConstruction(
+                ClassPathResource.class,
+                (mock, context) -> when(mock.exists()).thenReturn(false)
+        )) {
             assertThrows(ApplicationException.class, () -> templateService.getTemplateImage(templateUuid));
             assertEquals(1, mocked.constructed().size());
         }
